<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.j32u4ukh.enigma.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--旋轉盤-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/block_margin"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textWheel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/textWheel"
                android:textSize="20sp"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberLeft"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberMedium"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberRight"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <!--輸入-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/block_margin">

                <TextView
                    android:text="@string/textInput"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInput"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/editInput"
                    android:ems="10"
                    android:id="@+id/editInput"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <!--輸出-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/block_margin">

                <TextView
                    android:text="@string/textOutput"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textOutput"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/editOutput"
                    android:ems="10"
                    android:id="@+id/editOutput"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </LinearLayout>

            <!--功能區-->
            <!--記憶-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/buttonMemory1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/block_margin"
                    android:id="@+id/buttonMemory1"
                    android:background="@color/buttonColor"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/buttonMemory2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/block_margin"
                    android:id="@+id/buttonMemory2"
                    android:background="@color/buttonColor"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/buttonMemory3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/block_margin"
                    android:id="@+id/buttonMemory3"
                    android:background="@color/buttonColor"
                    android:layout_weight="1"
                    android:onClick="onClick"/>
            </LinearLayout>

            <!--轉換-->
            <Button
                android:text="@string/buttonTranslation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/block_margin"
                android:background="@color/buttonColor"
                android:id="@+id/buttonTranslation"
                android:onClick="onClick" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
